# ai_fastapi

./: main.py  pyproject.toml  settings.py
app/client/: __init__.py
app/endpoint/: __init__.py
